--- a/src/components/button.css
+++ b/src/components/button.css
@@ -68,10 +68,198 @@
     margin-bottom: 300px; 
     display: inline-block;
     box-sizing: border-box;
-    /* border: 2px solid var(--primary); */
-    
-    
-    
+    /* border: 2px solid var(--primary); */  
+}
+
+.btn--primary--outline2 {
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: -910px;
+    margin-top: -275px;
+    margin-bottom: 300px; 
+    /* margin-right: 834px; */
+    display: inline-block;
+    box-sizing: border-box;
+
+    /* border: 2px solid var(--primary); */  
+}
+.btn--primary--outline3:hover {
+    transform: translateY(-3px);
+    background-color: transparent;
+}
+.btn--primary--outline3 {
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: 70px;
+    margin-top: -528px;
+    margin-bottom: 500px; 
+    /* margin-right: 834px; */
+    display: inline-block;
+    box-sizing: border-box;
+
+    /* border: 2px solid var(--primary); */  
+}
+.btn--primary--outline2:hover {
+    transform: translateY(-3px);
+    background-color: transparent;
+}
+.btn--primary--outline4 {
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: -730px;
+    margin-top: -395px;
+    margin-bottom: 370px; 
+    /* margin-right: 834px; */
+    display: inline-block;
+    box-sizing: border-box;
+
+    /* border: 2px solid var(--primary); */  
+}
+.btn--primary--outline4:hover {
+    transform: translateY(-3px);
+    background-color: transparent;
+}
+.btn--prog--all {
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: 11px;
+    margin-top: 60px;
+    margin-bottom: 0em;
+    border: 0.05em solid #000000;
+    display: inline-block;
+    box-sizing: border-box;
+    /* box-shadow: -3px 3px 1px rgba(0,0,0,0.5); */
+}
+.btn--flappy {
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: 700px;
+    margin-right:60px;
+    margin-top: -120px;
+    margin-bottom: 80px;
+    border: 0.05em solid #000000;
+    display: inline-block;
+    box-sizing: border-box;
+    /* box-shadow: -3px 3px 1px rgba(0,0,0,0.5); */
+}
+.btn--flappy--2 {
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: 700px;
+    margin-right:60px;
+    margin-top: -170px;
+    margin-bottom: 190px;
+    border: 0.05em solid #000000;
+    display: inline-block;
+    box-sizing: border-box;
+    /* box-shadow: -3px 3px 1px rgba(0,0,0,0.5); */
+}
+.btn--flappy:hover {
+    transform: translateY(-3px);
+    background-color: var(--transparent);
+    /* text-shadow: 0 0 2em rgba(0,0,0,1); */
+}
+.btn--flappy--2:hover {
+    transform: translateY(-3px);
+    background-color: var(--transparent);
+    /* text-shadow: 0 0 2em rgba(0,0,0,1); */
+}
+.btn--flappy--github {
+    background-image: url(../assets/GitHub-Mark-32px.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: 1000px;
+    margin-top: -140px;
+    margin-bottom: 110px;
+    border: 0.05em solid #000000;
+    display: inline-block;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 100px;
+    /* box-shadow: -3px 3px 1px rgba(0,0,0,0.5); */
+}
+.btn--flappy--github2 {
+    background-image: url(../assets/GitHub-Mark-32px.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: 1000px;
+    margin-top: -230px;
+    margin-bottom: 190px;
+    border: 0.05em solid #000000;
+    display: inline-block;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 100px;
+    /* box-shadow: -3px 3px 1px rgba(0,0,0,0.5); */
+}
+.btn--flappy--github3 {
+    background-image: url(../assets/GitHub-Mark-32px.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: 200px;
+    margin-top: -210px;
+    margin-bottom: 170px;
+    border: 0.05em solid #000000;
+    display: inline-block;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 100px;
+    /* box-shadow: -3px 3px 1px rgba(0,0,0,0.5); */
+}
+.btn--flappy--github4 {
+    background-image: url(../assets/GitHub-Mark-32px.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: 770px;
+    margin-top: -120px;
+    margin-bottom: 90px;
+    border: 0.05em solid #000000;
+    display: inline-block;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 100px;
+    /* box-shadow: -3px 3px 1px rgba(0,0,0,0.5); */
+}
+.btn--flappy--github5 {
+    background-image: url(../assets/GitHub-Mark-32px.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: 770px;
+    margin-top: -170px;
+    margin-bottom: 90px;
+    border: 0.05em solid #000000;
+    display: inline-block;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 100px;
+    /* box-shadow: -3px 3px 1px rgba(0,0,0,0.5); */
+}
+.btn--flies--yt {
+    background-image: url(../assets/yt.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: -300px;
+    margin-top: -210px;
+    margin-bottom: 170px;
+    border: 0.05em solid #000000;
+    display: inline-block;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 100px;
+    /* box-shadow: -3px 3px 1px rgba(0,0,0,0.5); */
 }
 .btn--primary--outline:hover {
     transform: translateY(-3px);
@@ -86,10 +274,7 @@
     margin-bottom: 250px; 
     display: inline-block;
     box-sizing: border-box;
-    /* border: 2px solid var(--primary); */
-    
-    
-    
+    /* border: 2px solid var(--primary); */    
 }
 .btn--other--outline:hover {
     transform: translateY(-3px);
@@ -105,9 +290,22 @@
     display: inline-block;
     box-sizing: border-box;
     /* border: 2px solid var(--primary); */
-    
-    
-    
+}
+
+.btn--single:hover {
+    transform: translateY(-3px);
+    background-color: transparent;
+}
+.btn--single {
+    background-color: var(--transparent);
+    color: var(--black);
+    margin-left: 490px;
+    margin-right: 27em;
+    margin-top: -70px;
+    margin-bottom: 250px; 
+    display: inline-block;
+    box-sizing: border-box;
+    /* border: 2px solid var(--primary); */
 }
 .btn--success--outline:hover {
     transform: translateY(-3px);
@@ -136,5 +334,9 @@
 .btn--small {
     padding: 5px 141px;
     font-size: 20px;
+}
+.btn--extra--small {
+    padding: 3px 5px;
+
 }
 
