--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,7 @@ a:hover {
   position: absolute;
   left: 50%;
   margin-left: -520px;
+  z-index: 4;
 }
 
 body {
@@ -182,6 +183,7 @@ a.social {
   margin: 0 1rem;
   transition: transform 250ms;
   display: inline-block;
+  z-index: 4;
 }
 a.social:hover {
   transform: translateY(-2px);
