--- a/src/Home.css
+++ b/src/Home.css
@@ -48,6 +48,7 @@ p {
 .biomed-text {
     /* color: #81a4cd; */
     /* color: #dadce1; */
+    z-index: -1;
     color: var(--bg);
     font-size: 250px;
     font-weight: 1000;
@@ -82,7 +83,7 @@ p {
     margin-top: 70px;
     text-align: justify;
     animation: 1s ease-out 0s 1 slideInFromRight;
-    
+    z-index: -1;
 }
 
 .fn-text {
