--- a/src/About.css
+++ b/src/About.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Chivo:300,300i,400,400i,700,700i,900,900i|Saira+Extra+Condensed:100,200,300,400,500,600,700,800|Saira:100,200,300,400,500,600,700,800");
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap");
+@import url("http://fonts.cdnfonts.com/css/arial-nova");
 :root {
   --py-bar-width: 325px;
   --java-bar-width: 300px;
@@ -1158,7 +1159,7 @@ h1 {
 }
 
 .main-section {
-  height: 100vh;
+  height: 80vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -1194,7 +1195,26 @@ h1 {
     background-color: var(--test-col);
     margin-left: 20px;
   }
-
+  .featured-title-left {
+    width: 100%;
+    font-size: 40px;
+    color: white;
+    letter-spacing: 7px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: flex-start;
+    text-shadow: 2px 2px var(--test-col); /* #1f1f1f */
+  }
+  .featured-title-left::after {
+    content: "";
+    display: block;
+    position: relative;
+    width: 540px;
+    height: 1px;
+    background-color: var(--test-col);
+    margin-left: 20px;
+  }
   .main-content {
     display: flex;
     flex-direction: row;
@@ -1824,4 +1844,119 @@ h1 {
     overflow: hidden;
     list-style: outside none none;
   }
+}
+
+/* add a thing for less than 475px */
+
+.project-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-top: 50px;
+  background-color: transparent;
+  margin-bottom: 30px;
+}
+
+.description-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 0 0 40%;
+}
+
+.description-container-right {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  flex: 0 0 40%;
+}
+
+.project-title {
+  color: #faffd8; /* #D2D7DF   #faffd8*/
+  font-weight: 600;
+  font-size: 30px;
+  width: 90%;
+  padding: 15px;
+  background-color: #5c6f70;
+  margin-bottom: 20px;
+  border: 1px solid #5c6f70;
+  border-radius: 4px;
+  z-index: 1;
+  box-shadow: 0 10px 30px -15px #1f1f1f;
+}
+
+.description-section {
+  width: 90%;
+  padding: 15px;
+  background-color: #5c6f70;
+  margin-bottom: 20px;
+  border: 1px solid #5c6f70;
+  border-radius: 4px;
+  z-index: 1;
+  box-shadow: 0 10px 30px -15px #1f1f1f;
+}
+
+.description-section li {
+  position: relative;
+  font-family: "Arial Nova";
+  color: white;
+  font-size: 15px;
+  padding-left: 15px;
+}
+
+.description-section li::before {
+  content: "‣";
+  line-height: 16px;
+  position: absolute;
+  left: 0px;
+  top: 4px;
+  padding-right: 3px;
+  color: var(--test-col);
+}
+.project-description {
+  color: white;
+  font-size: 15px;
+  font-weight: 400;
+  font-family: "Arial Nova";
+  margin-bottom: 0;
+}
+
+.features-title {
+  color: #faffd8;
+  font-size: 18px;
+  font-family: "Manrope";
+  font-weight: 600;
+}
+.feature-pic {
+  height: 435px;
+  width: 625px;
+  box-shadow: 0 10px 30px -15px #1f1f1f;
+}
+
+.project-frameworks {
+  width: 90%;
+  padding: 15px;
+  background-color: #5c6f70;
+  /* margin-bottom: 20px; */
+  border: 1px solid #5c6f70;
+  border-radius: 4px;
+  z-index: 1;
+  box-shadow: 0 10px 30px -15px #1f1f1f;
+}
+.project-frameworks ul {
+  font-family: "Fira Code";
+  font-size: 13px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.project-frameworks li {
+  flex: 0 0 20%;
+  text-align: center;
+  font-weight: 500;
 }
