--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,7 @@ a:hover {
   align-items: center;
   justify-content: center;
   transition: all 300ms;
+  color: var(--text-colour)
 }
 
 .nav-item:hover {
